# endgame-abstractions

./: .gitignore  AUTHORS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: paths.py
docs/: architecture.md  combinatorics_and_compression.md  feature_registry.csv  feature_registry.md  human_policy_modeling_geometric_motifs.md  methodology.md  roadmap.md  theory_artifacts.md
scripts/: analyze_kpk_misclassified.py  build_kpk_dataset.py  build_kpk_features.py  export_feature_registry.py  test_tb.py  train_kpk_tree.py  tune_kpk_tree.py  validate_kpk_tree.py
scripts/analysis/: feature_importance.py
scripts/kbbk/: build_dataset.py  build_features.py  run_pipeline.sh  train_classifier.py  validate.py
scripts/kbnk/: build_dataset.py  build_features.py  train_classifier.py  validate.py
scripts/knnk/: build_dataset.py  build_features.py  run_pipeline.sh  train_classifier.py  validate.py
scripts/kpk/: build_features.py  compression_analysis.py  engine.py  generate_kpk.py  print_kpk_tree.py  train_regression.py  train_tree.py  tune_tree.py
scripts/krk/: build_dataset.py  build_features.py  train_classifier.py  train_tree.py  tune_tree.py  validate.py
src/configs/: paths.py
src/endgame/: kpk_analyzer.py  pipeline.py
src/endgame/features/: feature_registry.yaml  kbbk_geom.py  kbnk_geom.py  knnk_geom.py  kpk_geom.py  krk_geom.py
src/endgame/utils/: logger.py
